- Allow specifying partitioning options in PostgreSQL data load script 
- Refactor client code for sqlite3 to automatically build support if libraries
  exist
- Refactor client code for MySQL to automatically build support if libraries
  exist
- Refactor client code for unixODBC to automatically build support if libraries
  exist
- Fix some issues in CockroachDB transaction code.

v0.45.1

- Rename PostgreSQL dbt2 extension's SQL file

v0.45.0

- Fix memory clobbering bug introduced when using libpq functions in binary
  mode
- Increase size of additional data structures for UTF-8

v0.44.0

- Made some changes to Docker scripts to help customize PostgreSQL version used
- Add scripts to build a database on CockroachDB
- Add transaction logic to the client for CockroachDB
- Update workload scripts for CockroachDB
- Add scripts to build a database on YugabyteDB
- Update libpq client code to transmit and receive data in binary mode.

v0.43.0

- Adopt Artistic License 2.0
- Fix run-workload script to work on single tier configuration, bugs
  introduced v0.42 
- Driver now logs w_id and d_id per transaction
- Fix segmentation fault when limiting the total number of driver threads
- Increase buffer size for the database hostname in the client to 64 bytes
- Add -y flag to run-workload script to specify database is a service
- Fix driver's rampup calculation when limiting total emulated terminals
- Update Dockerfile to use Rocky Linux instead of CentOS
- Fix driver execution when limited to a single terminal

v0.42

- Add Docker files and scripts to test building and evaluate a PostgreSQL
  database.
- Update for CMake policy CMP0037.
- Replace obsolete bzero with memset
- Replace obsolete gethostbyname and gethostbyaddr with getaddrinfo
- Use PCG Fast pseudo random number generator
- Update data generator to use UTF-8
- Refactor datagen parallelism
- Update PostgreSQL pl/pgsql stored functions
- Support basic 3-tier execution with run-workload script