@@ -11,6 +11,7 @@ vX.Y.Z
 - Refactor client code for unixODBC to automatically build support if libraries
   exist
 - Fix some issues in CockroachDB transaction code.
+- Use function pointers for managing output of timestamps in datagen
 
 v0.45.1
 
